--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     env_file:
       - .env
     networks:
-      - proxy
       - frontend
       - backend
     ports:
@@ -29,13 +28,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik-apps.${DOMAIN1}`)"
+      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik.${DOMAIN1}`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik-dashboard.${DOMAIN1}`)"
+      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.apps.${DOMAIN1}`)||Host(`traefik.${DOMAIN1}`)"
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
@@ -49,8 +48,6 @@ services:
       - "traefik.http.routers.traefik-secure.service=api@internal"
 
 networks:
-  proxy:
-    external: true
   frontend:
     external: true
   backend:
