--- a/beszel-apps/docker-compose.yml
+++ b/beszel-apps/docker-compose.yml
@@ -11,3 +11,6 @@ services:
     environment:
       LISTEN: 45876
       KEY: ${BESZEL_KEY}
+      TOKEN: ${TOKEN}
+      HUB_URL: ${HUB_URL}
+      TZ: Europe/London
