--- a/ea-in-bloom/docker/nginx.conf
+++ b/ea-in-bloom/docker/nginx.conf
@@ -19,7 +19,7 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
     access_log /var/log/nginx/access.log main;
 
-    # Performance optimizations
+    # Performance
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -68,32 +68,26 @@ http {
             access_log off;
         }
 
+        # Cache HTML
+        location ~* \.(html|htm)$ {
+            expires 1h;
+            add_header Cache-Control "public";
+        }
+
         # Main location
         location / {
             try_files $uri $uri/ /index.html;
-            
-            # Cache HTML files for shorter time
-            location ~* \.(html|htm)$ {
-                expires 1h;
-                add_header Cache-Control "public";
-            }
         }
 
-        # Prevent access to hidden files
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
+        # Prevent access to hidden/backup files
+        location ~ /\. { deny all; access_log off; log_not_found off; }
+        location ~ ~$  { deny all; access_log off; log_not_found off; }
 
-        # Prevent access to backup files
-        location ~ ~$ {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
+        # Quiet logs for favicon & robots.txt
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
 
-        # Custom error pages
+        # Error pages
         error_page 404 /index.html;
         error_page 500 502 503 504 /index.html;
     }
