--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -1,22 +1,3 @@
-# services:
-#   postgresql:
-#     image: docker.io/library/postgres:16-alpine
-#     container_name: authentik_db
-#     restart: unless-stopped
-#     healthcheck:
-#       test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
-#       start_period: 20s
-#       interval: 30s
-#       retries: 5
-#       timeout: 5s
-#     volumes:
-#       - database:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-#       - POSTGRES_USER=${POSTGRES_USER}
-#       - POSTGRES_DB=${POSTGRES_DB}
-#     networks:
-#       - backend
 services:
   redis:
     image: docker.io/library/redis:alpine
@@ -30,7 +11,7 @@ services:
       retries: 5
       timeout: 3s
     volumes:
-      - redis:/data
+      - ./config/redis:/data
     networks:
       - backend
 
@@ -50,8 +31,8 @@ services:
       - AUTHENTIK_POSTGRESQL__PASSWORD=${POSTGRES_PASSWORD}
       - AUTHENTIK_ERROR_REPORTING__ENABLED=true
     volumes:
-      - /mnt/homeserver-config/authentik/media:/media
-      - /mnt/homeserver-config/authentik/custom-templates:/templates
+      - ./config/media:/media
+      - ./config/custom-templates:/templates
     labels:
       - "traefik.enable=true"
       # HTTPS Router
@@ -84,9 +65,9 @@ services:
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /mnt/homeserver-config/authentik/media:/media
-      - /mnt/homeserver-config/authentik/certs:/certs
-      - /mnt/homeserver-config/authentik/custom-templates:/templates
+      - ./config/media:/media
+      - ./config/certs:/certs
+      - ./config/custom-templates:/templates
     depends_on:
       - redis
     networks:
