Updated Hardening Script with hostname feature

--- a/beszel-htz001/docker-compose.yml
+++ b/beszel-htz001/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   beszel-agent:
     image: "henrygd/beszel-agent"
     container_name: "beszel-htz001-agent"
-    restart: unless-stopped
+    restart: always
     network_mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
