--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -1,22 +1,22 @@
 services:
-  redis:
-    image: docker.io/library/redis:alpine
-    command: --save 60 1 --loglevel warning
-    container_name: authentik_redis
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
-      start_period: 20s
-      interval: 30s
-      retries: 5
-      timeout: 3s
-    volumes:
-      - ./config/redis:/data
-    networks:
-      - backend
+  # redis:
+  #   image: docker.io/library/redis:alpine
+  #   command: --save 60 1 --loglevel warning
+  #   container_name: authentik_redis
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+  #     start_period: 20s
+  #     interval: 30s
+  #     retries: 5
+  #     timeout: 3s
+  #   volumes:
+  #     - ./config/redis:/data
+  #   networks:
+  #     - backend
 
   server:
-    image: ghcr.io/goauthentik/server:2025.6.3
+    image: ghcr.io/goauthentik/server:2025.10
     restart: unless-stopped
     command: server
     container_name: authentik_server
@@ -43,14 +43,14 @@ services:
       # Service configuration
       - "traefik.http.services.authentik-service.loadbalancer.server.port=9000"
       - "traefik.http.routers.authentik-secure.service=authentik-service"
-    depends_on:
-      - redis
+    # depends_on:
+    #   - redis
     networks:
       - frontend
       - backend
 
   worker:
-    image: ghcr.io/goauthentik/server:2025.6.3
+    image: ghcr.io/goauthentik/server:2025.10
     restart: unless-stopped
     command: worker
     container_name: authentik_worker
@@ -68,14 +68,14 @@ services:
       - ./config/media:/media
       - ./config/certs:/certs
       - ./config/custom-templates:/templates
-    depends_on:
-      - redis
+    # depends_on:
+    #   - redis
     networks:
       - backend
 
-volumes:
-  redis:
-    driver: local
+# volumes:
+#   redis:
+#     driver: local
 
 networks:
   frontend:
